[[bin]]
name = 'probe-similarity'
path = 'main.rs'

[package]
name = 'probe-similarity'
version = '0.1.0'
authors = ['Jasper den Hertog <jdenhertog@ripe.net>']
edition = '2018'

[dependencies]
serde = '1.0.79'
serde_derive = '1.0.79'
csv = '1.0.2'
flate2 = '1.0.2'
actix = '0'
actix-web = '2.0'
actix-rt = '1.0'
memmap = '0.7.0'
rayon = '1.0.2'
time = '0.1.40'
quickersort = '3.0.1'
rand = '0.7'
regex = '1'

[dependencies.avro-rs]
version = '0.6'
features = ['snappy']
